<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/txtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:text="@string/txt_code"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/txt_verification"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_otp_instruction"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/etOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/curved_white_background"
                    android:drawableStart="@drawable/ic_otp"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_hint_otp"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etOtp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/curved_white_background"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_hint_new_password"
                    android:inputType="numberPassword"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etNewPassword"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/curved_white_background"
                    android:drawableStart="@drawable/ic_confirm_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_hint_confirm_password"
                    android:inputType="numberPassword"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/btnVerify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etConfirmPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_rounded_blue"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/btn_txt_verify"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etConfirmPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:visibility="gone" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>